--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Feature_Melin_Ryan.Feature_Melin_Ryan
+GameDefaultMap=/Game/Levels/Main_Menu.Main_Menu
 GlobalDefaultGameMode=/Game/BP_GameMode.BP_GameMode_C
-EditorStartupMap=/Game/Feature_Melin_Ryan.Feature_Melin_Ryan
+EditorStartupMap=/Game/Levels/Main_Menu.Main_Menu
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
