--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,3 +2,6 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=8AB3B26341E95E6DB059F3B4F9E2C2F6
+ProjectName=Feature_Melin_Ryan
+CompanyName=CAGD
+
